--- a/src/index.scss
+++ b/src/index.scss
@@ -88,7 +88,7 @@ html {
 }
 
 body {
-  background-image: url("/src/assets/images/Moody_background.png");
+  background-image: url("/images/Moody_background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
